--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">SQLite Provider</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Change Background Color</string>
 </resources>
